<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordGenerator"
    android:background="@drawable/background_gradient_lights">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lengthbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/enter_length"
            android:backgroundTint="#453956"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/generatebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:text="@string/generate"
        android:backgroundTint="#453956"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="70dp"
            android:text=""
            android:textColor="@color/black"/>
    </ScrollView>

    <Button
        android:id="@+id/copybtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:text="@string/copy_to_clipboard"
        android:backgroundTint="#453956"
        android:textColor="@color/white"/>


</LinearLayout>