<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:padding="16dp"
    android:background="@drawable/background_gradient_lights">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        android:id="@+id/coin"
        app:cardElevation="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="12dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/coin_heads" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coin_toss"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingStart="12dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrow_right"
                android:layout_gravity="center"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        android:id="@+id/dice"
        app:cardElevation="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="12dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/dice_6" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dice_roll"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingStart="12dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrow_right"
                android:layout_gravity="center"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/password"
        app:cardCornerRadius="12dp"
        app:cardElevation="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="12dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/password" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate_password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingStart="12dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrow_right"
                android:layout_gravity="center"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/list"
        app:cardCornerRadius="12dp"
        app:cardElevation="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="12dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/list" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/custom_list"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingStart="12dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrow_right"
                android:layout_gravity="center"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_with_by_laksh_arora"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textColor="#FF0000"
        android:textStyle="bold"/>

</LinearLayout>
